# faceapp

./: README.md  pyproject.toml
configs/: default.yaml
src/faceapp/: app.py  cli.py
src/faceapp.egg-info/: SOURCES.txt  top_level.txt
